// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render color 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -10,11 +10,10 @@
      class="css-16xh7r5"
      style="transform: scale(0.4444444444444444);"
    >
      <div
        class="css-1frx7qu"
-       style="color: blue;"
      >
        <div
          class="InnerBar1"
        />
        <div
`;

exports[`props should render correctly 1`] = `
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
  position: relative;
}

@media (prefers-reduced-motion) {
  .emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
  -webkit-transition: none !important;
  transition: none !important;
}

.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  height: 36px;
  left: 0;
  opacity: 0.6;
  position: absolute;
  top: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  width: 36px;
}

@media (prefers-reduced-motion) {
  .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  -webkit-transition: none !important;
  transition: none !important;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  color: currentColor;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 54px;
  left: 50%;
  padding: 10px;
  position: absolute;
  top: 50%;
  -webkit-transform: translate( -50%,-50% );
  -ms-transform: translate( -50%,-50% );
  transform: translate( -50%,-50% );
  width: 54px;
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none !important;
  transition: none !important;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 > div {
  -webkit-animation: ComponentsUISpinnerFadeAnimation 1000ms linear infinite;
  animation: ComponentsUISpinnerFadeAnimation 1000ms linear infinite;
  background: currentColor;
  border-radius: 50px;
  height: 16%;
  left: 49%;
  opacity: 0;
  position: absolute;
  top: 43%;
  width: 6%;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar1 {
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-transform: rotate( 0deg ) translate( 0,-130% );
  -ms-transform: rotate( 0deg ) translate( 0,-130% );
  transform: rotate( 0deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar2 {
  -webkit-animation-delay: -0.9167s;
  animation-delay: -0.9167s;
  -webkit-transform: rotate( 30deg ) translate( 0,-130% );
  -ms-transform: rotate( 30deg ) translate( 0,-130% );
  transform: rotate( 30deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar3 {
  -webkit-animation-delay: -0.833s;
  animation-delay: -0.833s;
  -webkit-transform: rotate( 60deg ) translate( 0,-130% );
  -ms-transform: rotate( 60deg ) translate( 0,-130% );
  transform: rotate( 60deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar4 {
  -webkit-animation-delay: -0.7497s;
  animation-delay: -0.7497s;
  -webkit-transform: rotate( 90deg ) translate( 0,-130% );
  -ms-transform: rotate( 90deg ) translate( 0,-130% );
  transform: rotate( 90deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar5 {
  -webkit-animation-delay: -0.667s;
  animation-delay: -0.667s;
  -webkit-transform: rotate( 120deg ) translate( 0,-130% );
  -ms-transform: rotate( 120deg ) translate( 0,-130% );
  transform: rotate( 120deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar6 {
  -webkit-animation-delay: -0.5837s;
  animation-delay: -0.5837s;
  -webkit-transform: rotate( 150deg ) translate( 0,-130% );
  -ms-transform: rotate( 150deg ) translate( 0,-130% );
  transform: rotate( 150deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar7 {
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
  -webkit-transform: rotate( 180deg ) translate( 0,-130% );
  -ms-transform: rotate( 180deg ) translate( 0,-130% );
  transform: rotate( 180deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar8 {
  -webkit-animation-delay: -0.4167s;
  animation-delay: -0.4167s;
  -webkit-transform: rotate( 210deg ) translate( 0,-130% );
  -ms-transform: rotate( 210deg ) translate( 0,-130% );
  transform: rotate( 210deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar9 {
  -webkit-animation-delay: -0.333s;
  animation-delay: -0.333s;
  -webkit-transform: rotate( 240deg ) translate( 0,-130% );
  -ms-transform: rotate( 240deg ) translate( 0,-130% );
  transform: rotate( 240deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar10 {
  -webkit-animation-delay: -0.2497s;
  animation-delay: -0.2497s;
  -webkit-transform: rotate( 270deg ) translate( 0,-130% );
  -ms-transform: rotate( 270deg ) translate( 0,-130% );
  transform: rotate( 270deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar11 {
  -webkit-animation-delay: -0.167s;
  animation-delay: -0.167s;
  -webkit-transform: rotate( 300deg ) translate( 0,-130% );
  -ms-transform: rotate( 300deg ) translate( 0,-130% );
  transform: rotate( 300deg ) translate( 0,-130% );
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 .InnerBar12 {
  -webkit-animation-delay: -0.0833s;
  animation-delay: -0.0833s;
  -webkit-transform: rotate( 330deg ) translate( 0,-130% );
  -ms-transform: rotate( 330deg ) translate( 0,-130% );
  transform: rotate( 330deg ) translate( 0,-130% );
}

<div
  aria-busy="true"
  class="components-spinner wp-components-spinner emotion-2"
  data-g2-c16t="true"
  data-g2-component="Spinner"
  style="height: 16px; width: 16px;"
>
  <div
    aria-hidden="true"
    class="emotion-1"
    style="transform: scale(0.4444444444444444);"
  >
    <div
      class="emotion-0"
    >
      <div
        class="InnerBar1"
      />
      <div
        class="InnerBar2"
      />
      <div
        class="InnerBar3"
      />
      <div
        class="InnerBar4"
      />
      <div
        class="InnerBar5"
      />
      <div
        class="InnerBar6"
      />
      <div
        class="InnerBar7"
      />
      <div
        class="InnerBar8"
      />
      <div
        class="InnerBar9"
      />
      <div
        class="InnerBar10"
      />
      <div
        class="InnerBar11"
      />
      <div
        class="InnerBar12"
      />
    </div>
  </div>
</div>
`;

exports[`props should render size 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,16 +1,16 @@
  <div
    aria-busy="true"
    class="components-spinner wp-components-spinner css-10r9amq"
    data-g2-c16t="true"
    data-g2-component="Spinner"
-   style="height: 31px; width: 31px;"
+   style="height: 16px; width: 16px;"
  >
    <div
      aria-hidden="true"
      class="css-16xh7r5"
-     style="transform: scale(0.8611111111111112);"
+     style="transform: scale(0.4444444444444444);"
    >
      <div
        class="css-1frx7qu"
      >
        <div
`;
